--- a/cli/testapp/package.json
+++ b/cli/testapp/package.json
@@ -1,5 +1,9 @@
 {
   "name": "package",
   "version": "0.0.0",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "underscore": "~1.5.2"
+  }
 }
