--- a/cli/testapp/package.json
+++ b/cli/testapp/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "inquirer": "~0.3.4"
   }
 }
