--- a/cli/grunt-splunk/package.json
+++ b/cli/grunt-splunk/package.json
@@ -27,6 +27,10 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "underscore": "~1.5.2",
+    "inquirer": "~0.3.4"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-clean": "~0.4.0",
