--- a/cli/testapp/package.json
+++ b/cli/testapp/package.json
@@ -4,7 +4,6 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "underscore": "~1.5.2",
-    "inquirer": "~0.3.4"
+    "grunt-splunk": "~0.1.0"
   }
 }
