--- a/cli/grunt-splunk/package.json
+++ b/cli/grunt-splunk/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "underscore": "~1.5.2",
-    "inquirer": "~0.3.4"
+    "inquirer": "~0.3.4",
+    "splunk-sdk": "~1.2.1"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.0",
